bdr.BDR2.scala.error
Erreur de compilation :
BDR2:2: error: not found: value esSurMessage
while (esSurMessage) {
       ^BDR2:4: error: not found: value litmessage
   litmessage match {
   ^